# snek

./: .clang-format  .clangd  CMakeLists.txt  README.md
src/: app.cxx  app.hxx  defs.hxx  grid.cxx  grid.hxx  main.cxx  movement.cxx  movement.hxx  snake.cxx  snake.hxx
